[package]
authors = ["Daniel Egger <daniel@eggers-club.de>"]
categories = [
    "embedded",
    "hardware-support",
    "no-std",
]
description = "A platform agnostic driver to interface with the I2C based NXP MAG3110 magnetometer"
documentation = "https://docs.rs/mag3110"
keywords = [
    "embedded-hal-driver",
    "magnetometer",
    "MEMS",
]
license = "0BSD"
name = "mag3110"
repository = "https://github.com/therealprof/mag3110"
version = "0.1.4"

[dependencies]
embedded-hal = "0.2.1"

[dependencies.cast]
default-features = false
version = "0.2.2"
